<resources>
    <string name="username">UserName</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="signupButton">Sign Up</string>
    <string name="you_have_already_account">you have Already Account?</string>
    <string name="login_now">login now</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="icon_snack_bar_custom">iconSnackbarCustom</string>
    <string name="username_is_required">Username is required</string>
    <string name="username_must_start_with_a_letter_and_contain_only_letters_numbers_or_underscores">Username must start with a letter and contain only letters, numbers, or underscores</string>
    <string name="first_name_is_required">First name is required</string>
    <string name="last_name_is_required">Last name is required</string>
    <string name="email_is_required">Email is required</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="please_confirm_your_password">Please confirm your password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_must_be_at_least_6_characters_long">Password must be at least 6 characters long</string>
    <string name="password_is_required">Password is required</string>
    <string name="loginButton">login</string>
    <string name="usernameOrEmail">username or email\n</string>
    <string name="youDontHaveAccount">you don\'t have Account?</string>
    <string name="SignUpNow">SignUp</string>
    <string name="usernameOrEmailisRequired">username or Email is required</string>
    <string name="forgetPassword">Forget Password</string>
    <string name="send">Send</string>
    <string name="verifyCode">Verify Code</string>
    <string name="didnt_get_the_code">Didn\'t get the code?</string>
    <string name="clickToResend">Click to resend</string>
    <string name="resend_in">Resend in</string>
    <string name="s">s</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="please_check_your_email_to_see_n_nthe_verification_code">please check Your Email to See\n\nThe Verification Code</string>
    <string name="otp_code">OTP Code</string>
    <string name="forgetPasswordHead">Forget password</string>
    <string name="enterYourEmailParagraph">Enter Your Email Account To Reset\n\nYour Password</string>
    <string name="helloAgain">Hello Again</string>
    <string name="loginParagraph">Fill Your Details</string>
    <string name="RegisterAccount">Register Account</string>
    <string name="title_home">Home</string>
    <string name="account">Account</string>
    <string name="supportAndAbout"><![CDATA[Support&About]]></string>
    <string name="edit_profile">Edit Profile</string>
    <string name="back">back</string>
    <string name="profile">Profile</string>
    <string name="setting_item_image">Setting Item Image</string>
    <string name="changePassword">Change Password</string>
    <string name="my_orders">My Orders</string>
    <string name="address">Address</string>
    <string name="accountDetails">Account Details</string>
    <string name="darkMode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="policePrivacy">Terms and Policies</string>
    <string name="logout">Log out</string>
    <string name="permissionDenied">permissionDenied</string>
    <string name="imageNotSelected">Image Not Selected</string>
    <string name="edit">Edit</string>
    <string name="cancel">cancel</string>
    <string name="edit_name">Edit Name</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="change">Change</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City:</string>
    <string name="post_code">Post Code</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="select_the_country">select the country</string>
    <string name="phone_number_is_required">phone number is required</string>
    <string name="invalid_phone_number_format">invalid phone number format</string>
    <string name="post_code_is_required">post code is required</string>
    <string name="invalid_post_code_format">invalid post code format</string>
    <string name="city_is_required">city is required</string>
    <string name="invalid_city_format">invalid city format</string>
    <string name="address_updated_successfully">Address Updated Successfully</string>
    <string name="street_address">Street Address</string>
    <string name="street_address_is_required">street address is required</string>
    <string name="invalid_street_address_format">invalid street address format</string>
    <string name="please_select_country_and_state">Please select country and state</string>
    <string name="please_turn_on_your_location">Please turn on your location</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="product_image">product image</string>
    <string name="favourite">Favourite</string>
    <string name="productImage">productImage</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="delete">delete</string>
    <string name="increase">increase</string>
    <string name="decrease">decrease</string>
    <string name="check_out">Check Out</string>
    <string name="item_cart_decrease_counter">itemCartDecreaseCounter</string>
    <string name="item_cart_increase_counter">itemCartIncreaseCounter</string>
    <string name="onDelivery">onDelivery</string>
    <string name="creditCard">CreditCard</string>
    <string name="ok">OK</string>
    <string name="cash_onDelivery">Payment method: Cash on delivery</string>
    <string name="creditCardNumber">Credit Card Number</string>
    <string name="expiredCard">Expired Card</string>
    <string name="cvv">Cvv\n</string>
    <string name="the_item_has_been_removed_successfully">The item has been removed successfully</string>
    <string name="the_item_has_been_added_successfully">the item has been added successfully</string>
    <string name="empty_cart">Empty cart</string>
    <string name="order_has_been_created_successfully">Order Has Been Created Successfully</string>
    <string name="order_tag_number">Order Tag Number: </string>
    <string name="order_date_create">Date Create: </string>
    <string name="order_total">Total Price: </string>
    <string name="orders">Orders</string>
    <string name="products_amount">Products Amount:</string>
    <string name="total_price">Total Price :</string>
    <string name="currency">EG</string>
    <string name="product">Product:</string>
    <string name="price">Price:</string>
    <string name="order_change">Your order %1$s has changed status to %2$s.</string>
    <string name="your_order_has_changed_status_to">"Your Order %1$s has changed status to %2$s "</string>
    <string name="delete_button">delete_button</string>
    <string name="empty_message">%1$s</string>
    <string name="empty_cart_message">Empty Cart</string>
    <string name="empty_orders_message">Empty Orders</string>
    <string name="search_products">Search Products</string>
    <string name="edit_address">edit address</string>
    <string name="delete_address">delete address</string>
    <string name="add_address">add address</string>
    <string name="no_address_found">No Address Found</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="full_name">"FullName: "</string>
    <string name="country">"Country: "</string>
    <string name="total_price_format">Total Price: %.2f %s</string>
    <string name="status">Status: %1$s</string>
    <string name="status_stock">Status Stock:%1$s</string>
    <string name="product_name">Product:%1$s</string>
    <string name="price_eg">Price:%1$s EG</string>
    <string name="category">Category:%1$s</string>
    <string name="_00">.00</string>
    <string name="address_selected_successfully">Address Selected Successfully</string>
    <string name="please_select_address">Please Select address</string>
    <string name="address_unselected_successfully">Address UnSelected Successfully</string>
    <string name="address_deleted_successfully">Address deleted successfully</string>
    <string name="address_inserted_successfully">Address Inserted Successfully</string>
    <string name="selected_address_icon">selected address icon</string>
    <string name="address_already_selected">Address Already Selected</string>
    <string name="email_exist">The email Already exist</string>
    <string name="update_user_details_success">Edit Name successfully</string>
    <string name="permission_denied">Permission denied</string>
    <string name="your_internet_has_been_restored">Your Internet has been Restored</string>
    <string name="you_are_currently_offline">You are currently offline</string>
    <string name="Xlatter">x</string>
    <string name="title_product">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_address">Addresses</string>
    <string name="title_language">Language</string>
    <string name="title_edit_address">Edit Address</string>
    <string name="title_product_details">Product Details</string>
    <string name="title_cart">Cart</string>
    <string name="title_order_details">Order Details</string>
    <string name="title_check_verification_code">Check Verification Code</string>
    <string name="title_forget_password">Forget Password</string>
    <string name="title_login">Login</string>
    <string name="title_signup">SignUp</string>
    <string name="title_orders">Orders</string>
    <string name="user_name_already_exist">User Name Already Exist</string>
    <string name="filter_icon">filter_icon</string>
    <string name="no_regions_available">No regions available</string>
    <string name="unknown">unknown</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="filter">Filter</string>
    <string name="select">Select</string>
    <string name="change_password_error">Please check your passowrd or Email</string>
    <string name="unknown_message">Unknown message</string>
    <string name="unsupported_event">Unsupported event</string>
    <string name="not_work">not work</string>
    <string name="logout_successfully">Logout Successfully</string>
    <string name="customer_or_address_not_found">Customer or Address Id not found</string>
    <string name="address_not_found">Addresss Not Found</string>
    <string name="order_created_successfully">Order Created successfully</string>
    <string name="egypt">Egypt</string>
    <string name="cairo">Cairo</string>
    <string name="aswan">Aswan</string>
    <string name="asyut">Asyut</string>
    <string name="beheira">Beheira</string>
    <string name="alexandria">Alexandria</string>
    <string name="dakahlia">Dakahlia</string>
    <string name="damietta">Damietta</string>
    <string name="faiyum">Faiyum</string>
    <string name="gharbia">Gharbia</string>
    <string name="giza">Giza</string>
    <string name="kafr_el_sheikh">Kafr El Sheikh</string>
    <string name="ismailia">Ismailia</string>
    <string name="luxor">Luxor</string>
    <string name="matrouh">Matrouh</string>
    <string name="minya">Minya</string>
    <string name="monufia">Monufia</string>
    <string name="new_valley">New Valley</string>
    <string name="north_sinai">North Sinai</string>
</resources>