<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/productFragment"
        android:icon="@drawable/home_icon_selector"
        android:title="@string/title_home" />
    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/cart_icon_selector"
        android:title="@string/title_cart" />
    <item
        android:id="@+id/ordersFragment"
        android:icon="@drawable/online_delivery"
        android:title="@string/orders" />
    <item
        android:id="@+id/addressFragment"
        android:icon="@drawable/address_icon_selector"
        android:title="@string/title_address" />
    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/setting_icon_selector"
        android:title="@string/title_setting" />
</menu>