<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".features.authentication.presentation.screens.LoginActivity">

    <TextView
        android:id="@+id/loginHeadTextView"
        style="@style/headLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/helloAgain"
        android:textColor="?attr/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/loginParagraphTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginHeadTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        style="@style/paragraphStyle"
        android:textColor="?attr/colorOnSecondary"
        android:text="@string/loginParagraph"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loginCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorBackgroundFloating"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameOrEmailTextFieldInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usernameOrEmail"
                android:textColorHint="?attr/colorOnSecondary"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/CustomHintTextAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameOrEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Fourth TextField -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLoginTextFieldInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="?attr/colorOnSecondary"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/CustomHintTextAppearance"
                app:passwordToggleDrawable="@drawable/round_visibility_off_24"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordLoginEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgetPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginVertical="6dp"
                android:clickable="true"
                android:gravity="center"
                android:layout_gravity="end"
                android:text="@string/forgetPassword"
                android:textColor="?attr/colorOnSecondary"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                style="@style/customButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/loginButton"
                android:textColor="?attr/colorOnPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/youDontHaveAccount"
                    android:textColor="?attr/colorOnSecondary"
                    />

                <TextView
                    android:id="@+id/SignUpTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="3dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/SignUpNow"
                    android:textColor="?attr/colorSecondary"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>