<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".features.cart.presentation.screens.checkout.CheckoutFragment">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioOnDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/onDelivery" />

        <RadioButton
            android:id="@+id/radioCreditCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/creditCard" />
    </RadioGroup>


    <LinearLayout
        android:id="@+id/layoutOnDelivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="10dp"
            android:text="@string/cash_onDelivery"
            android:textSize="16sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonOnDelivery"
                style="@style/customButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/ok"
                android:textColor="?attr/colorOnPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCancelOnDelivery"
                style="@style/customButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/cancel"
                android:textColor="?attr/colorOnPrimary" />

        </LinearLayout>
    </LinearLayout>

    <!-- Change Password Layout -->
    <LinearLayout
        android:id="@+id/layoutCreditCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPasswordTextFieldInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="1dp"
            android:hint="@string/creditCardNumber"
            android:textColorHint="?attr/colorOnSecondary"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/CustomHintTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expiredCardTextFieldInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:hint="@string/expiredCard"
                android:textColorHint="?attr/colorOnSecondary"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/CustomHintTextAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/expiredCardEditText"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ccvTextFieldInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:hint="@string/cvv"
                android:textColorHint="?attr/colorOnSecondary"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/CustomHintTextAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ccvEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCreditCard"
                style="@style/customButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/ok"
                android:textColor="?attr/colorOnPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCancelCreditCard"
                style="@style/customButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/cancel"
                android:textColor="?attr/colorOnPrimary" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>

